[gd_scene load_steps=13 format=3 uid="uid://dorwtx3kdq1md"]

[ext_resource type="Script" path="res://Scenes/Enemies/Hostile_Ship.gd" id="1_t35kf"]
[ext_resource type="Resource" uid="uid://d02w2y7dmmv6c" path="res://Resources/Captains/EnemyCaptains/EnemyBase.tres" id="2_3fotg"]
[ext_resource type="Texture2D" uid="uid://dxhiurny73kpr" path="res://Assets/Spaceship/Spaceship_top_Main Camera.png" id="4_21j58"]
[ext_resource type="Texture2D" uid="uid://dic62egg7dtn4" path="res://Assets/smoke_02.png" id="6_htfi0"]
[ext_resource type="AudioStream" uid="uid://18n3m3gw8twb" path="res://Assets/Sounds/turbine_01.wav" id="7_6kls6"]
[ext_resource type="Shader" path="res://Shaders/Radar.gdshader" id="8_8fagq"]

[sub_resource type="Curve" id="Curve_qk12j"]
_data = [Vector2(0, 0.297297), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rlrpj"]
curve = SubResource("Curve_qk12j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kyfni"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 1.244
initial_velocity_max = 1.0
angular_velocity_min = -1.60933e-05
angular_velocity_max = 308.99
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_rlrpj")

[sub_resource type="CircleShape2D" id="CircleShape2D_dxthp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_63pb3"]
resource_local_to_scene = true
radius = 150.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v4ssc"]
resource_local_to_scene = true
shader = ExtResource("8_8fagq")
shader_parameter/line_color = Color(0.983526, 0.0936426, 7.70092e-07, 1)
shader_parameter/range_lines = 1.0
shader_parameter/sector_lines = 0.0
shader_parameter/line_width = 0.0011
shader_parameter/beam_angle = 0.2
shader_parameter/beam_width = 0.003
shader_parameter/trail_width = 0.1
shader_parameter/sector_rotation = 0.5
shader_parameter/ShowRadat = true
shader_parameter/Paused = false
shader_parameter/scale_factor = 0.015

[node name="HostileShip" type="Node2D" groups=["Enemy", "Ships"]]
script = ExtResource("1_t35kf")
Cpt = ExtResource("2_3fotg")
Patrol = false
ShipCallsign = "G"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-1, 0)
amount = 50
process_material = SubResource("ParticleProcessMaterial_kyfni")
texture = ExtResource("6_htfi0")
lifetime = 20.0

[node name="PlayerShipSpr" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_21j58")

[node name="Aceleration" type="Node2D" parent="."]
position = Vector2(0.5, 0)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_6kls6")
volume_db = -15.0
pitch_scale = 0.5
bus = &"MapSounds"

[node name="ShipBody" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipBody"]
shape = SubResource("CircleShape2D_dxthp")

[node name="Radar" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radar"]
shape = SubResource("CircleShape2D_63pb3")

[node name="Radar_Range" type="ColorRect" parent="Radar" groups=["MapLines"]]
visible = false
material = SubResource("ShaderMaterial_v4ssc")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10000.0
offset_top = -10000.0
offset_right = 10000.0
offset_bottom = 10000.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[connection signal="area_entered" from="ShipBody" to="." method="_on_area_entered"]
[connection signal="area_exited" from="ShipBody" to="." method="_on_area_exited"]
[connection signal="area_entered" from="Radar" to="." method="_on_radar_2_area_entered"]
[connection signal="area_exited" from="Radar" to="." method="_on_radar_2_area_exited"]
